2012-02-14  Sancho Lerena <slerena@artica.es>

	* include/config_process.php: updated build & version.

	* operation/search_agents.php: Fixed bug: icon to manage agent

	* operation/search_results.php: Fixed bug: search with blank spaces,
	again another HTML entity problem :(

2012-02-13  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/fgraph.php
	include/functions_visual_map.php: Fixed little
	graphs into the visual maps of the widgets 
	(min height control added)
	Merged from trunk

2012-02-14  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions_api.php: Merged from trunk. Added
	get_all_alert_templates function to API.

2012-02-14  Koichiro Kikuchi  <koichiro@rworks.jp>

	* include/javascript/pandora_alerts.js: Removed double quotes which encolse
	  substituted field[1-3] from command preview.  pandora_server doesn't add
	  double quotes to enclose these fields.
	  Merged from trunk

2012-02-13  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js: fixed the resize
	background.
	
	Fixes: #3483645
	
	Merged bugfix from trunk.

2012-02-13  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: cleaned source code style, and fixed the
	size of graphs in "top_n" for the dashboard.
	
	Fixes: #3483715
	
	Merged bugfix from trunk.

2012-02-13  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: cleaned source code style, and fixed the
	show graphs in "top_n" report item, now it is static graph and show a as
	text of bars (or pie pieces) the agent name and module for more clear and
	when you have same agents with distints modules, now the graph don't group
	by agent.
	
	Fixes: #3483852
	
	Merged bugfix from trunk.

2012-02-13  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/estado_monitores.php, operation/agentes/ver_agente.php:
	cleaned source code style.
	