@@ -67,7 +67,13 @@ function check_refererer() {
 	if ($config['https']) {
 		$url = 'https://';
 	}
-	$url .= $_SERVER['SERVER_NAME'] . $config["homeurl"];
+	//Check if the referer have a port (for example when apache run in other port to 80)
+	if (preg_match('/http(s?):\/\/.*:[0-9]*/', $referer) == 1) {
+		$url .= $_SERVER['SERVER_NAME'] . ':' . $_SERVER['SERVER_PORT'] . $config["homeurl"];
+	}
+	else {
+		$url .= $_SERVER['SERVER_NAME'] . $config["homeurl"];
+	}
 	
 	if (strpos($referer, $url) === 0) {
 		return true;
